ChangeLog for eclectic

2005-05-08 Tom Martin <slarti@gentoo.org>
	* modules/eclectic.mailer: Fix a stupid typo (findi_targets ->
	find_targets).

2005-05-07 Ciaran McCreesh <ciaranm@gentoo.org>

	* Tag for release 0.9.1
	* configure.in: Version is now 0.9.0.
	* doc/user-guide.txt, doc-developer.txt: Clarify update and scan
	action definitions, update formatting and wording.

2005-05-07 Danny van Dyk <kugelfang@gentoo.org>

	* doc/user-guide.txt: Added a first draft of the user docs.

2005-05-07 Ciaran McCreesh <ciaranm@gentoo.org>

	* doc/developer-guide.txt: Fix formatting, typos. Add a bit more about
	how eclectic works.
	* doc/Makefile.am: Make this much more generic.
	* misc/Makefile.am: Add Makefile.in to maintainer-clean targets.

2005-05-07 Tom Martin <slarti@gentoo.org>

	* man/mailer.eclectic.5: Add a man page for mailer.eclectic.
	* modules/mailer.eclectic: Add a check_dirs() function for
	sanity checking /etc/mail/.

2005-05-07 Danny van Dyk <kugelfang@gentoo.org>

	* man/profile.eclectic.5: Fixed typos.
	* doc/developer-guide.txt: Added descriptions for the multilib.bash
	and config.bash functions.

2005-05-07 Ciaran McCreesh <ciaranm@gentoo.org>

	* doc/: Add initial developer docs.
	* libs/core.bash.in: Fix bug in has so that it is consistent with
	portage syntax.
	* modules/blas.eclectic, modules/lapack.eclectic: Update to new has
	syntax.

2005-05-07 Aaron Walker <ka0ttic@gentoo.org>

	* modules/profile-symlink.eclectic: Fix sed to use current
	profiles.desc format. Also, ensure that explicitly specified profiles
	are actually valid for the host arch.
	* man/Makefile.am: Add missing manual pages.
	* man/profile.eclectic.5: Add missing '.br'.
	* configure.in, Makefile.am, doc/Makefile.am: Added Makefile.am for
	doc/ with html target.

2005-05-07 Danny van Dyk <kugelfang@gentoo.org>

	* libs/output.bash.in: Added function 'space'.
	* libs/default.eclectic.in: Fixed do_usage to filter 'action'.