@@ -1,7 +1,8 @@
 bin_SCRIPTS = eclectic
 EXTRA_DIST = eclectic.in
 
-dosed = @SED@ -e 's,%DATADIR%,$(datadir),g'
+dosed = @SED@ -e 's,%DATADIR%,$(datadir),g' \
+	      -e 's,%VERSION%,$(VERSION),g'
 
 % : %.in
 	@echo "Building $@..."
