@@ -1,5 +1,11 @@
 ChangeLog for eclectic
 
+2005-05-08 Aaron Walker <ka0ttic@gentoo.org>
+
+	* modules/profile.module: Re-fix profile module since the
+	profile-symlink -> profile move reverted the changes.
+	* bin/eclectic.in, bin/Makefile.am: Use %VERSION%.
+
 2005-05-08 Tom Martin <slarti@gentoo.org>
 	* modules/eclectic.mailer: Fix a stupid typo (findi_targets ->
 	find_targets).
@@ -7,7 +13,7 @@ ChangeLog for eclectic
 2005-05-07 Ciaran McCreesh <ciaranm@gentoo.org>
 
 	* Tag for release 0.9.1
-	* configure.in: Version is now 0.9.0.
+	* configure.in: Version is now 0.9.1.
 	* doc/user-guide.txt, doc-developer.txt: Clarify update and scan
 	action definitions, update formatting and wording.
 
